--- a/api-reference/elements/pdf.mdx
+++ b/api-reference/elements/pdf.mdx
@@ -32,7 +32,7 @@ The `Pdf` class allows you to display a PDF hosted remotely or locally in the ch
 
 <ParamField path="page" type="int" optional>
   The default rendered page. Must be an integer greater than 0 and less than or
-  equal to the total number of pages in the PDF.
+  equal to the total number of pages in the PDF. The default value is 1.
 </ParamField>
 
 ## Example
