--- a/data-persistence/tags-metadata.mdx
+++ b/data-persistence/tags-metadata.mdx
@@ -4,8 +4,6 @@ title: Tags & Metadata
 
 Tags and metadata provide valuable context for your threads, steps and generations.
 
-More information [here](https://docs.getliteral.ai/blog/guide-tag-scores-metadata).
-
 ```py
 @cl.step(type="run")
 async def func(input):
@@ -15,3 +13,5 @@ async def func(input):
     # some code
     return output
 ```
+
+More information [here](https://docs.literalai.com/guides/logs#add-metadata-and-tags).
