--- a/integrations/openai.mdx
+++ b/integrations/openai.mdx
@@ -9,7 +9,7 @@ title: OpenAI
 
 The benefits of this integration is that you can see the OpenAI API calls in a step in the UI, and you can explore them in the prompt playground.
 
-You will also get the full generation details (prompt, completion, tokens per second...) in your Literal AI dashboard, if your project is using [Literal AI](https://docs.getliteral.ai).
+You will also get the full generation details (prompt, completion, tokens per second...) in your Literal AI dashboard, if your project is using [Literal AI](https://docs.literalai.com).
 
 You need to add `cl.instrument_openai()` after creating your OpenAI client.
 
