--- a/integrations/mistralai.mdx
+++ b/integrations/mistralai.mdx
@@ -4,7 +4,7 @@ title: Mistral AI
 
 The benefits of this integration is that you can see the Mistral AI API calls in a step in the UI, and you can explore them in the prompt playground.
 
-You will also get the full generation details (prompt, completion, tokens per second...) in your Literal AI dashboard, if your project is using [Literal AI](https://docs.getliteral.ai).
+You will also get the full generation details (prompt, completion, tokens per second...) in your Literal AI dashboard, if your project is using [Literal AI](https://docs.literalai.com).
 
 To benefit from tracing, you need to add `cl.instrument_mistralai()` after creating your Mistral AI client.
 
