--- a/api-reference/elements/tasklist.mdx
+++ b/api-reference/elements/tasklist.mdx
@@ -38,7 +38,7 @@ async def main():
 
     # Optional: link a message to each task to allow task navigation in the chat history
     message_id = await cl.Message(content="Started processing data").send()
-    task1.forId = message_id
+    task1.forId = message_id.id
 
     # Update the task list in the interface
     await task_list.send()
