--- a/api-reference/ask/ask-for-action.mdx
+++ b/api-reference/ask/ask-for-action.mdx
@@ -19,7 +19,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   config.
 </ParamField>
 <ParamField path="disable_human_feedback" type="bool" optional default="False">
-  The number of seconds to wait for an answer before raising a TimeoutError.
+  Boolean flag to disable human feedback buttons.
 </ParamField>
 <ParamField path="timeout" type="int" optional default={90}>
   The number of seconds to wait for an answer before raising a TimeoutError.
