--- a/deploy/copilot.mdx
+++ b/deploy/copilot.mdx
@@ -30,6 +30,12 @@ First, make sure your Chainlit server is running. Then, add the following script
 <body>
   <!-- ... -->
   <script src="http://localhost:8000/copilot/index.js"></script>
+<script>
+        window.addEventListener("chainlit-call-fn", (e) => {
+            const { name, args, callback } = e.detail;
+            callback("You sent: " + args.msg);
+        });
+    </script>
   <script>
     window.mountChainlitWidget({
       chainlitServer: "http://localhost:8000",
