fix haystack desc

--- a/integrations/haystack.mdx
+++ b/integrations/haystack.mdx
@@ -4,8 +4,8 @@ title: Haystack
 
 <Note>
   The current Haystack integration allows you to run chainlit apps and visualise
-  intermediary steps. Playground capabilities will be added with the release of
-  Haystack 2.0.
+  intermediary steps. Only supports Haystack 1.x. We welcome contributions to
+  make it compatible with Haystack 2.0.
 </Note>
 
 Haystack is an end-to-end NLP framework that enables you to build NLP applications powered by LLMs, Transformer models, vector search and more. Whether you want to perform question answering, answer generation, semantic document search, or build tools that are capable of complex decision making and query resolution, you can use the state-of-the-art NLP models with Haystack to build end-to-end NLP applications solving your use case.
