update openai assistant cookbook link

--- a/integrations/openai.mdx
+++ b/integrations/openai.mdx
@@ -4,7 +4,8 @@ title: OpenAI
 
 <Note>
   If you are using OpenAI assistants, check out the [OpenAI
-  Assistant](https://github.com/Chainlit/openai-assistant) example app.
+  Assistant](https://github.com/Chainlit/cookbook/tree/main/openai-data-analyst)
+  example app.
 </Note>
 
 The benefits of this integration is that you can see the OpenAI API calls in a step in the UI, and you can explore them in the prompt playground.
