--- a/deploy/react/overview.mdx
+++ b/deploy/react/overview.mdx
@@ -2,43 +2,33 @@
 title: "Overview"
 ---
 
-The `@chainlit/react-client` package allows you to seamlessly integrate Chainlit's backend capabilities with your React applications. This integration enables real-time communication, state management, and various chat functionalities using React hooks and the Chainlit API client.
+The `@chainlit/react-client` package allows you to seamlessly integrate Chainlit's backend capabilities with your React applications, enabling real-time communication, state management, and various chat functionalities using React hooks and the Chainlit API client.
 
-It is composed of several core features and hooks that make managing chat sessions, messages, authentication, and custom UI elements easier.
+It consists of several core features and hooks that simplify managing chat sessions, messages, authentication, and custom UI elements.
 
 <CardGroup cols={2}>
   <Card
     title="Installation and Setup"
     icon="gear"
     color="#61DBFB"
-    href="/integrations/react/installation-setup"
+    href="/deploy/react/installation-and-setup"
   >
     Learn how to install and set up the Chainlit React client.
   </Card>
   <Card
-    title="Core Features"
+    title="Usage"
     icon="bolt"
     color="#f59e0b"
-    href="/integrations/react/core-features"
+    href="/deploy/react/usage"
   >
     Explore the key features provided by the React client.
   </Card>
   <Card
-    title="React Hooks"
-    icon="webhook"
-    color="#22c55e"
-    href="/integrations/react/hooks"
-  >
-    A comprehensive guide to the available hooks.
-  </Card>
-  <Card
-    title="Getting Started"
+    title="Additional Resources"
     icon="flag"
     color="#3b82f6"
-    href="/integrations/react/getting-started"
+    href="/deploy/react/additional-resources"
   >
-    Follow a step-by-step guide to begin using Chainlit with React.
+    Explore additional resources for the React client.
   </Card>
 </CardGroup>
-
-With Chainlit's React integration, you can customize your app's frontend while leveraging powerful backend features for chat applications, making your development experience more efficient and flexible.
