fix hooks sidebar formatting, add anchor links for hooks, move 'react' below 'webapp'

--- a/deploy/react/usage.mdx
+++ b/deploy/react/usage.mdx
@@ -1,13 +1,14 @@
-### React Hooks
+
+## React Hooks
 
 The `@chainlit/react-client` package provides several React hooks to manage various aspects of your chat application seamlessly:
 
-- **`useChatSession`**: Manages the chat session's connection to the WebSocket server.
-- **`useChatMessages`**: Manages retrieval and rendering of chat messages.
-- **`useChatData`**: Accesses chat-related data and states.
-- **`useChatInteract`**: Provides methods to interact with the chat system.
-- **`useAuth`**: Handles authentication processes.
-- **`useApi`**: Simplifies API interactions with built-in support for data fetching and error handling.
+- **[`useChatSession`](#usechatsession-hook)**: Manages the chat session's connection to the WebSocket server.
+- **[`useChatMessages`](#usechatmessages-hook)**: Manages retrieval and rendering of chat messages.
+- **[`useChatData`](#usechatdata-hook)**: Accesses chat-related data and states.
+- **[`useChatInteract`](#usechatinteract-hook)**: Provides methods to interact with the chat system.
+- **[`useAuth`](#useauth-hook)**: Handles authentication processes.
+- **[`useApi`](#useapi-hook)**: Simplifies API interactions with built-in support for data fetching and error handling.
 
 ---
 
