add previous overview description back

--- a/deploy/react/overview.mdx
+++ b/deploy/react/overview.mdx
@@ -2,9 +2,14 @@
 title: "Overview"
 ---
 
-The `@chainlit/react-client` package allows you to seamlessly integrate Chainlit's backend capabilities with your React applications, enabling real-time communication, state management, and various chat functionalities using React hooks and the Chainlit API client.
+Chainlit allows you to create a custom frontend for your application, offering you the flexibility to design a unique user experience. By integrating your frontend with Chainlit's backend, you can harness the full power of Chainlit's features, including:
 
-It consists of several core features and hooks that simplify managing chat sessions, messages, authentication, and custom UI elements.
+- Abstractions for easier development
+- Monitoring and observability
+- Seamless integrations with various tools
+- Robust authentication mechanisms
+- Support for multi-user environments
+- Efficient data streaming capabilities
 
 <CardGroup cols={2}>
   <Card
@@ -31,4 +36,20 @@ It consists of several core features and hooks that simplify managing chat sessi
   >
     Explore additional resources for the React client.
   </Card>
+  <Card
+    title="Custom React frontend"
+    color="#61DBFB"
+    icon="react"
+    href="https://github.com/Chainlit/cookbook/tree/main/custom-frontend"
+  >
+    Learn how to integrate your custom React frontend with the Chainlit backend.
+  </Card>
 </CardGroup>
+
+The [@chainlit/react-client](https://www.npmjs.com/package/@chainlit/react-client) package is designed for integrating Chainlit applications with React. It offers several hooks and an API client for seamless connection and interaction.
+
+## Supported Features
+
+| Message | Streaming | Elements | Audio | Ask User | Chat History | Chat Profiles | Feedback |
+| ------- | --------- | -------- | ----- | -------- | ------------ | ------------- | -------- |
+| ✅      | ✅        | ✅       | ✅    | ✅       | ✅           | ✅            | ✅       |
