Add link to the cookbook example

--- a/deploy/webapp.mdx
+++ b/deploy/webapp.mdx
@@ -55,3 +55,7 @@ window.addEventListener('message', (event) => {
   }
 });
 ```
+
+### Example
+
+Check out this example from the cookbook that uses the window messaging feature: https://github.com/Chainlit/cookbook/tree/main/window-message
